# clips_executive-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  file_load_plugin.xml  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
clips_executive/: CHANGELOG.rst  README.md  package.xml  rosdoc2.yaml
clips_executive/cx_docs/: index.rst
clips_executive/cx_docs/getting_started/: configuration.rst  dynamic.rst  index.rst  usage.rst
clips_executive/cx_docs/plugin_generator/: gen_action.rst  gen_info.rst  gen_msgs.rst  gen_srvs.rst
clips_executive/cx_docs/plugins/: executive_plugin.rst  file_load_plugin.rst  index.rst  protobuf_plugin.rst  ros_msgs_plugin.rst  ros_param_plugin.rst  tf2_pose_tracker_plugin.rst
clips_executive/cx_docs/tutorials/: hello_world.rst  index.rst  ros_monitoring.rst
cx_bringup/: CHANGELOG.rst  README.md  package.xml
cx_bringup/clips/plugin_examples/: ros-param.clp
cx_bringup/params/plugin_examples/: ros_param.yaml
cx_clips_env_manager/: CHANGELOG.rst  package.xml
cx_clips_env_manager/include/cx_clips_env_manager/: clips_plugin_manager.hpp
cx_clips_env_manager/src/: clips_plugin_manager.cpp
cx_docs/: conf.py
cx_docs/getting_started/: logging.rst
cx_docs/plugins/: index.rst
cx_docs/tutorials/: writing_a_plugin.rst
cx_msgs/: CHANGELOG.rst  package.xml
cx_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
cx_plugin/include/cx_plugin/: clips_plugin.hpp
cx_plugins/ament_index_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml
cx_plugins/ament_index_plugin/src/: ament_index_plugin.cpp
cx_plugins/config_plugin/: CHANGELOG.rst  CMakeLists.txt  config_plugin.xml  package.xml
cx_plugins/config_plugin/src/: config_plugin.cpp
cx_plugins/example_plugin/: CHANGELOG.rst  package.xml
cx_plugins/executive_plugin/: CHANGELOG.rst  package.xml
cx_plugins/file_load_plugin/: CHANGELOG.rst  package.xml
cx_plugins/protobuf_plugin/: CHANGELOG.rst  README.md  package.xml  protobuf_plugin.xml
cx_plugins/protobuf_plugin/cmake/: cx_protobuf_sub_plugin.cmake
cx_plugins/protobuf_plugin/include/cx_protobuf_plugin/: protobuf_plugin.hpp
cx_plugins/protobuf_plugin/templates/: plugin.jinja.xml
cx_plugins/ros_msgs_plugin/: CHANGELOG.rst  package.xml  ros_msgs_plugin.xml
cx_plugins/ros_param_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  ros_param_plugin.xml
cx_plugins/ros_param_plugin/include/cx_ros_param_plugin/: ros_param_plugin.hpp
cx_plugins/ros_param_plugin/src/: ros_param_plugin.cpp
cx_plugins/tf2_pose_tracker_plugin/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  tf2_pose_tracker_plugin.xml
cx_ros_comm_gen/: CHANGELOG.rst  package.xml
cx_ros_comm_gen/cmake/: cx_generate_comm.cmake
cx_ros_comm_gen/templates/: create.jinja.cpp  destroy.jinja.cpp  get_field.jinja.cpp  ret_fun.jinja.cpp  set_field.jinja.cpp  srv.jinja.cpp  srv.jinja.hpp  void_fun.jinja.cpp
cx_tutorial_agents/: CHANGELOG.rst  CMakeLists.txt  package.xml
cx_tutorial_agents/params/: hello_world.yaml  tf2_tracked_pose.yaml
cx_utils/: CHANGELOG.rst  package.xml
cx_utils/src/: clips_env_context.cpp
debian/: changelog  control  copyright  gbp.conf  rules
include/cx_ament_index_plugin/: ament_index_plugin.hpp
include/cx_clips_env_manager/: clips_env_manager.hpp
include/cx_executive_plugin/: executive_plugin.hpp
params/: turtlesim.yaml
rpm/: ros-jazzy-clips-executive.spec  ros-jazzy-cx-ament-index-plugin.spec  ros-jazzy-cx-bringup.spec  ros-jazzy-cx-clips-env-manager.spec  ros-jazzy-cx-example-plugin.spec  ros-jazzy-cx-msgs.spec  ros-jazzy-cx-protobuf-plugin.spec  ros-jazzy-cx-ros-msgs-plugin.spec  ros-jazzy-cx-ros-param-plugin.spec  ros-jazzy-cx-tutorial-agents.spec  ros-kilted-cx-ament-index-plugin.spec  ros-kilted-cx-bringup.spec  ros-kilted-cx-config-plugin.spec  ros-kilted-cx-file-load-plugin.spec  ros-kilted-cx-msgs.spec  ros-kilted-cx-plugin.spec  ros-kilted-cx-ros-msgs-plugin.spec  ros-kilted-cx-ros-param-plugin.spec  ros-kilted-cx-tf2-pose-tracker-plugin.spec  ros-kilted-cx-tutorial-agents.spec  ros-lyrical-clips-executive.spec  ros-lyrical-cx-bringup.spec  ros-lyrical-cx-clips-env-manager.spec  ros-lyrical-cx-example-plugin.spec  ros-lyrical-cx-executive-plugin.spec  ros-lyrical-cx-msgs.spec  ros-lyrical-cx-protobuf-plugin.spec  ros-lyrical-cx-ros-msgs-plugin.spec  ros-lyrical-cx-ros-param-plugin.spec  ros-lyrical-cx-tf2-pose-tracker-plugin.spec  ros-lyrical-cx-tutorial-agents.spec  ros-lyrical-cx-utils.spec  ros-rolling-clips-executive.spec  ros-rolling-cx-ament-index-plugin.spec  ros-rolling-cx-bringup.spec  ros-rolling-cx-clips-env-manager.spec  ros-rolling-cx-config-plugin.spec  ros-rolling-cx-executive-plugin.spec  ros-rolling-cx-file-load-plugin.spec  ros-rolling-cx-plugin.spec  (+8 more)
src/: clips_env_manager.cpp  protobuf_plugin.cpp
templates/: action.jinja.cpp  action.jinja.hpp  msg.jinja.cpp  msg.jinja.hpp  plugin.jinja.xml
(+11 files in other folders)
