<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cx_ros_param_plugin</name>
  <version>0.1.3</version>
  <description>CLIPS plugin to retrieve ROS params from own or other nodes</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>cx_plugin</depend>
  <depend>cx_utils</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <cx_plugin plugin="${prefix}/ros_param_plugin.xml"/>
  </export>
</package>
